--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
  */
+ 
+@import "colours.css.scss";
+@import "typography.css.scss";
+@import "general.css.scss";
+@import "headers.css.scss";
+@import "footers.css.scss";
+@import "songs.css.scss";
+@import "albums.css.scss";
