--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  *= require_self
  *= require_tree
  */
- /*
+ /* TODO um? does tree actually work here?
 @import "colours.css.scss";
 @import "typography.css.scss";
 @import "general.css.scss";
