--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,9 +2,8 @@
   <b><%= link_to "Raymond Cohen's personal website", '#', class: "footer-title" %></b>
   <nav>
     <ul class="footer-main-nav">
-      <li><%= link_to "Help", '#' %></li>
-      <li><%= link_to "About", '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
 </footer>
