--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,4 +2,10 @@
 
 <div class="center hero-unit"><h1>Raymond Cohen 1919-2011</h1></div>
 
-This is the homepage of Raymond Cohen's website.
+<p>This is the homepage of Raymond Cohen's website.<br>
+
+Welcome! This site is very much still a work in progress. If you're interested in the project do <%= link_to "contact us", contact_path %>.</p>
+
+<%= button_to "Music", music_path, class: "btn btn-large btn-primary", method: 'get' %>
+<%= button_to "Biography", biography_path, class: "btn btn-large btn-primary", method: 'get' %>
+<%= button_to "Gallery", gallery_path, class: "btn btn-large btn-primary", method: 'get' %>
