--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,9 @@
   	<div class="container">
   		<%= link_to "Raymond Cohen", root_path, id: 'logo' %>
 		<ul class="nav pull-right">
-		    <li><%= link_to "Help",  '#' %></li>
-		    <li><%= link_to "About", '#' %></li>
+		    <li><%= link_to "Life",  biography_path %></li>
+		    <li><%= link_to "Music", music_path %></li>
+		    <li><%= link_to "Gallery", gallery_path %></li>
 		</ul>
 	</div>
   </div>
