Nested forms for albums

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -41,3 +41,10 @@
   -webkit-column-count: 3;
   column-count: 3;
 }
+
+.song-field {
+	background-color: #eaeaea;
+	padding: 25px;
+	padding-left: 40px;
+	margin-bottom: 50px;
+}
