--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -4,8 +4,8 @@
 
 <%= form_for @picture do |f| %>
 
-	<%= f.label :avatar %><br />
-	<%= f.file_field :avatar %>
+	<%= f.label :image %><br />
+	<%= f.file_field :image %>
 
 	<%= f.label :url, "Location" %>
 	<%= f.text_field :url %>
