--- a/app/views/albums/manage.html.erb
+++ b/app/views/albums/manage.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Manage music</h1>
 
+<%= button_to "New album", new_album_path, method: 'get', class: "btn btn-large btn-primary" %>
+
 <% if @albums.any? %>
 	
 	<ul class="albums">
