--- a/app/views/albums/_song_fields.html.erb
+++ b/app/views/albums/_song_fields.html.erb
@@ -3,8 +3,8 @@
 	<%= f.label :title %>
 	<%= f.text_field :title %>
 	
-	<%= f.label :url %>
-	<%= f.text_field :url %>
+	<%= f.label :track %>
+	<%= f.file_field :track %>
 
 	<%= f.label :description %>
 	<%= f.text_area :description %>
