--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -4,8 +4,8 @@
 
 <%= form_for @picture do |f| %>
 
-	<%= f.label :url, "Location" %>
-	<%= f.text_field :url %>
+	<%= f.label :image %><br />
+	<%= f.file_field :image %>
 
 	<%= f.label :description %>
 	<%= f.text_area :description %>
