--- a/app/views/pictures/_manage_picture.html.erb
+++ b/app/views/pictures/_manage_picture.html.erb
@@ -1,4 +1,4 @@
-<li class="picture"><%= image_tag picture.image.url(:thumb) %> 
+<li class="picture"><%= image_tag picture.image.url %> 
 	<%= link_to "Edit", edit_picture_path(picture) %> |
 	<%= link_to "Delete", picture, method: :delete, data: { confirm: "Are you sure?" } %>
 </li>
