--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="footer">
+<div class="container container-footer">
   <b><%= link_to "Raymond Cohen's personal website", '#', class: "footer-title" %></b>
   <nav>
     <ul class="footer-main-nav">
@@ -6,4 +7,5 @@
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
+</div>
 </footer>
