--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,13 +9,13 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree
  */
- /* TODO um? does tree actually work here?
 @import "colours.css.scss";
 @import "typography.css.scss";
 @import "general.css.scss";
 @import "headers.css.scss";
 @import "footers.css.scss";
 @import "songs.css.scss";
-@import "albums.css.scss";*/
+@import "albums.css.scss";
+@import "pictures.css.scss";
+@import "static_pages.css.scss";
