--- a/app/assets/stylesheets/colours.css.scss
+++ b/app/assets/stylesheets/colours.css.scss
@@ -1,8 +1,5 @@
 @import "bootstrap";
 
-$baseBlue: #D7E4F5;
-$lighterBlue: #5455c8;
-$darkBlue: #000140;
-$darkOrange: #c14100;
-$lightOrange: #ff8200;
-$paleOrange: #ffc180;
+$burgundy: #931600;
+$cinnabar: #c1521d;
+$tangerine: #ec8f39;
