--- a/app/assets/stylesheets/footers.css.scss
+++ b/app/assets/stylesheets/footers.css.scss
@@ -1,9 +1,11 @@
+@import "colours.css.scss";
+
 /* footer */
 
 footer {
+  background-color: $cinnabar;
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
   color: #eaeaea;
   a {
     color: #eaeaea;
@@ -22,4 +24,10 @@ footer {
       margin-left: 10px;
     }
   }
+}
+
+.container-footer {
+  border-top: 1px solid white;
+  margin-top: 50px;
+  padding-top: 10px;
 }
