--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "typography.css.scss";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -14,8 +15,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
-}
+  }
 
 section {
   overflow: auto;
@@ -31,54 +31,6 @@ textarea {
     margin-bottom: 10px;
   }
 }
-/*html {
-  overflow-y: scroll;
-  height: 100%;
-}
-
-body {
-  height: 100%;
-  background-color: black;
-}*/
-
-/*.container {
-  background-color: black;
-  background-size: 100%;
-  background-position: center bottom;  
-  background-repeat: no-repeat;
-  padding-bottom: 50px;
-  min-height: 100%;
-  min-width: 1200px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 800px;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top:50px;
-  margin-left: 100px;
-  margin-right: 100px;
-  position: relative;
-  background-color: #fff;
-}
-
-/*section {
-  overflow: auto;
-}
-
-textarea {
-  resize: vertical;
-  width: 100%;
-}
-
-.center {
-  text-align: center;
-  h1 {
-    margin-bottom: 10px;
-  }
-}*/
 
 #error_explanation {
   color: #f00;
