--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -17,7 +17,7 @@ h1 {
 	font-size: 3em;
 	letter-spacing: -2px;
 	margin-bottom: 30px;
-	color: $darkBlue;
+	color: white;
 }
 
 h2 {
@@ -45,9 +45,9 @@ p {
 
 a {
 	font-family: $sansFont;
-	color: $darkBlue;
+	color: $burgundy;
 	&:hover {
 		text-decoration: none;
-		color: $lighterBlue;
+		color: $cinnabar;
 	}
 }
