--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-  	<div class="container">
+<header class="navbar wide-section header-nav">
+  	<div class="container container-header">
   		<%= link_to "Raymond Cohen", root_path, id: 'logo' %>
 		<ul class="nav pull-right">
 		    <li><%= link_to "Life",  biography_path %></li>
@@ -8,5 +7,4 @@
 		    <li><%= link_to "Gallery", gallery_path %></li>
 		</ul>
 	</div>
-  </div>
 </header>
