--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, "Edit image" %>
 
-<h1>Edit image</h1>
+<div class="container">
 
 <%= form_for @picture do |f| %>
 
@@ -13,3 +13,5 @@
 	<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
 
 <% end %>
+
+</div>
