--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, "Gallery" %>
 
-<h1>Gallery</h1>
+<div class="container">
 
 <% if @pictures.any? %>
 	
@@ -13,3 +13,5 @@
 	No pictures found.
 
 <% end %>
+
+</div>
