--- a/app/views/pictures/manage.html.erb
+++ b/app/views/pictures/manage.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, "Manage Gallery" %>
 
-<h1>Manage Gallery</h1>
+<div class="container">
 
 <%= link_to "Add a picture", new_picture_path, method: 'get', class: "btn btn-large btn-primary" %>
 
@@ -17,3 +17,5 @@
 	No pictures found.
 
 <% end %>
+
+</div>
