--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, "Add picture to gallery" %>
 
-<h1>Add picture to gallery</h1>
+<div class="container">
 
 <%= form_for @picture do |f| %>
 
@@ -13,3 +13,5 @@
 	<%= f.submit "Create", class: "btn btn-large btn-primary" %>
 
 <% end %>
+
+</div>
