--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,4 +1,8 @@
 <% provide :title, "A picture of Raymond Cohen" %>
 
+<div class="container">
+
 <%= image_tag @picture.image.url, alt: "Image" %>
 <p><%= @picture.description %></p>
+
+</div>
