--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,7 @@
 <% provide :title, "Contact" %>
 
-<h1>Contact</h1>
+<div class="container">
 
 This site is being maintained by <%= link_to "Binney", "http://github.com/binney" %>.
+
+</div>
