--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,1 +1,1 @@
-<li class="picture"><%= image_tag picture.image.url, alt: "Image" %></li>
+<li class="picture"><%= image_tag picture.image.url(:full), alt: "Image" %></li>
