--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar wide-section header-nav">
   	<div class="container container-header">
   		<%= link_to "Raymond Cohen", root_path, id: 'logo' %>
-		<ul class="nav pull-right">
+		<ul class="nav pull-right site-nav">
 		    <li><%= link_to "Life",  biography_path %></li>
 		    <li><%= link_to "Music", music_path %></li>
 		    <li><%= link_to "Gallery", gallery_path %></li>
