--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,6 +1,16 @@
 <% provide :title, @album.name %>
 
-<div class="container">
+<div class="container container-fluid">
+
+<div class="row">
+
+<div class="col-md-6">
+
+<%= image_tag cover_for(@album), width: 300, height: 300, alt: @album.name %>
+
+</div>
+
+<div class="col-md-6">
 
 <% if @album.songs.any? %>
 	<ul class="songs">
@@ -9,5 +19,9 @@
 <% else %>
 	No songs found.
 <% end %>
+
+</div>
+
+</div>
 
 </div>
