--- a/app/views/pictures/_picture_thumb.html.erb
+++ b/app/views/pictures/_picture_thumb.html.erb
@@ -1,1 +1,3 @@
-<li class="picture-thumb"><%= image_tag picture.image.url(:thumb), alt: "Image" %></li>
+<li class="picture thumbnail-picture"><%= link_to picture do %>
+<%= image_tag picture.image.url(:thumb), alt: "Image" %>
+<% end %></li>
