Restyling, add Galleria, rearrange homepage layout

--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -1,5 +1,8 @@
 @import "bootstrap";
 
-$burgundy: #931600;
+/*$burgundy: #931600;
 $cinnabar: #c1521d;
-$tangerine: #ec8f39;
+$tangerine: #ec8f39;*/
+$burgundy: #000;
+$cinnabar: #999;
+$tangerine: #808080;
