--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,6 +2,8 @@
 
 <div class="container">
 
-About the site and why it exists.
+This web site contains the broadcast and recording legacy of Raymond Cohen's long life in music.
+
+Except for the commercially recorded records (LPs and CDs) all the music was recorded from live BBC broadcasts onto reel-to-reel or cassette tape. The quality of the recordings is therefore not as "clean" as modern digital recording, but retains the feeling of listening to a radio at home.
 
 </div>
