--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -16,7 +16,14 @@
 	height: 125px;
 	z-index: -1000;
 	position: absolute;
-	background-color: $cinnabar;
+	background-image: image-url("brahms.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center bottom;
+}
+
+.splash-bio {
+	text-align: bottom;
 }
 
 .gallery-preview {
