Delete redundant photo gallery js files

--- a/app/views/layouts/_homepage_header.html.erb
+++ b/app/views/layouts/_homepage_header.html.erb
@@ -1,5 +1,6 @@
 <header class="wide-section homepage-box">
   	<div class="container">
-  		<h1>Raymond Cohen 1919-2011</h1>
+  		<h1>Raymond Cohen</h1>
+  		<h2 class="homepage-subtitle">Violinist</h2>
 	</div>
 </header>
