--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,12 +6,18 @@
 	text-align: center;
 }
 
+.homepage-subtitle {
+	color: white;
+	margin-top: -20px;
+}
+
 .homepage-link {
 	padding-left: 50px;
 	padding-right: 50px;
 }
 
-.splash-cinnabar {
+.splash-brahms {
+	margin-top: -20px;
 	width: 100%;
 	height: 125px;
 	z-index: -1000;
@@ -22,27 +28,28 @@
 	background-position: center bottom;
 }
 
+.hackity-hack {
+	height: 100px;
+}
+
 .splash-bio {
 	text-align: bottom;
 }
 
-.gallery-preview {
-	border-top: 1px solid $burgundy;
-	padding-top: 50px;
-	li {
-		display: inline;
-	}
+.splash-portrait {
+	text-align: right;
 }
 
-.picture-preview {
-	margin-left: 0;
-	line-height: 170px;
+.homepage-links {
+	padding-bottom: 25px;
+}
+
+.homepage-gallery {
+	background-color: black;
+	padding-top: 25px;
 }
 
 .gallery-view-link {
-text-align: right;
-}
-
-.thumbnail-picture {
-	padding-right: 20px;
+	text-align: right;
+	color: white;
 }
